# neural-shading-s25

./: .gitignore  .gitmodules  LICENSE  README.md
autodiff/: README.md  square-debug.slang  square-struct.slang  square.slang
hardware-acceleration/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  setup.bat  setup.sh
hardware-acceleration/example-base/: example-base.cpp  example-base.h
hardware-acceleration/example-base/core/: slang-render-api-util.h
hardware-acceleration/example-base/core/unix/: slang-unix-process.cpp
hardware-acceleration/mlp-training/: README.md  common.slang  kernels.slang  mlp-training.cpp  mlp_sw.slang  mlvec_sw.slang  network.slang
hardware-acceleration/mlp-training-coopvec/: README.md  kernels.slang  mlp-training-coopvec.cpp
mipmap/: brdf.slang  nsc_01_basicprogram.py  nsc_01_basicprogram.slang  nsc_02_downsample.py  nsc_02_mipmap.py  nsc_02_mipmap.slang  nsc_03_supersample.py  nsc_04_loss.slang  nsc_05_train.py  nsc_05_train.slang  step_01_basicprogram.py  step_01_basicprogram.slang  step_02_mipmap.py  step_03_supersample.py  step_04_loss.py  step_05_train.py  step_05_train.slang
network/: nsc_nw_01_basicnetwork.py  nsc_nw_01_basicnetwork.slang  nsc_nw_02_3layers.py  nsc_nw_02_3layers.slang  nsc_nw_03_better_activations.py  nsc_nw_03_better_activations.slang  nsc_nw_04_frequency_encoding.py  nsc_nw_04_frequency_encoding.slang  nsc_nw_05_latent_texture.py  nsc_nw_05_latent_texture.slang  step_01_basicnetwork.py  step_01_basicnetwork.slang  step_02_multiple_layers.py  step_02_multiple_layers.slang  step_03_better_activations.py  step_03_better_activations.slang  step_04_frequency_encoding.py  step_04_frequency_encoding.slang  step_05_latent_texture.py  step_05_latent_texture.slang
